--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,7 @@
   ],
   "plugins": [
     "transform-runtime",
-    "transform-async-to-generator"
+    "transform-async-to-generator",
+    "transform-object-rest-spread"
   ]
 }
